Update to v3.0 and refine info section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker Donaciones Pocket Ants v2.2</title>
+    <title>Tracker Donaciones Pocket Ants v3.0 (Final)</title>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1234,7 +1234,7 @@
     <div class="container">
         <!-- Header principal -->
         <div class="header">
-            <h1>🐜 Donaciones Invencibles v2.0</h1>
+            <h1>🐜 Donaciones Invencibles v3.0 (Final)</h1>
             <div class="header-subtitle" id="headerLastUpdate">
                 Última actualización: Cargando...
             </div>
@@ -1294,7 +1294,7 @@
         <!-- Footer info -->
         <!-- Footer info -->
         <div class="footer-info">
-            <p>📱 v2.2.0 | Última actualización: <span id="lastUpdateTime">-</span></p>
+            <p>📱 v3.0.0 | Última actualización: <span id="lastUpdateTime">-</span></p>
             <p>🗓️ Semana iniciada: <span id="weekStartTime">-</span></p>
             <p id="admin-login-container" style="margin-top: 10px;"></p>
             <div id="backupButtons" style="display: none; margin-top: 10px;">
@@ -1377,19 +1377,7 @@
                 <li><strong>TOTAL:</strong> Suma histórica total de donaciones.</li>
             </ul>
 
-            <h3 style="color: #1a8c42; margin-top: 15px; border-bottom: 2px solid #e0e0e0; padding-bottom: 5px;">⚙️
-                Funciones Principales</h3>
-            <ul style="font-size: 13px; line-height: 1.6;">
-                <li><strong>⌨️ Entrada Manual:</strong> Pega la lista de donaciones (Nombre, Cantidad) para actualizar
-                    la tabla.</li>
-                <li><strong>⚙️ Configurar Meta:</strong> Define cuánto deben donar los jugadores por día.</li>
-                <li><strong>✓ Botón Verde:</strong> Abre opciones para:
-                    <ul>
-                        <li>✅ <em>Guardar Cambios:</em> Actualiza los datos sin cerrar la semana.</li>
-                        <li>🔄 <em>Cerrar Semana:</em> Finaliza la semana, guarda acumulados y reinicia contadores.</li>
-                    </ul>
-                </li>
-            </ul>
+
 
             <h3 style="color: #1a8c42; margin-top: 15px; border-bottom: 2px solid #e0e0e0; padding-bottom: 5px;">🎨
                 Leyenda de Colores</h3>
