feat: add tier color indicator and bump to v3.7

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker Donaciones Pocket Ants v3.6</title>
+    <title>Tracker Donaciones Pocket Ants v3.7</title>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1250,7 +1250,7 @@
             <div class="header-subtitle" id="headerLastUpdate">
                 Última actualización: Cargando...
             </div>
-            <div class="version-tag">v3.6</div>
+            <div class="version-tag">v3.7</div>
         </div>
 
         <!-- Botones de acción -->
@@ -1307,7 +1307,7 @@
         <!-- Footer info -->
         <!-- Footer info -->
         <div class="footer-info">
-            <p>📱 v3.6.0 | Última actualización: <span id="lastUpdateTime">-</span></p>
+            <p>📱 v3.7.0 | Última actualización: <span id="lastUpdateTime">-</span></p>
             <p>🗓️ Semana iniciada: <span id="weekStartTime">-</span></p>
             <p id="admin-login-container" style="margin-top: 10px;"></p>
             <div id="backupButtons" style="display: none; margin-top: 10px;">
@@ -2328,13 +2328,34 @@
                     totalAcumulado += (player.total || 0);
                     totalAcumuladoExceso += finalPotentialExcess;
 
+                    // Calculo de Color de Nivel de Acumulado (Tier Color)
+                    const oneWeekC = (goalDaily || 0) * 7;
+                    const oneMonthC = oneWeekC * 4;
+                    const acc = finalPotentialExcess;
+                    let tierColor = '#28a745'; // Default Green (Tier 1)
+                    let tierTitle = 'Nivel Verde: Eficiencia 100%';
+
+                    if (acc >= (oneMonthC * 5)) {
+                        tierColor = '#343a40'; // Black (Tier 4)
+                        tierTitle = 'Nivel Tope: Eficiencia 5%';
+                    } else if (acc >= (oneMonthC * 3)) {
+                        tierColor = '#dc3545'; // Red (Tier 3)
+                        tierTitle = 'Nivel Rojo: Eficiencia 10%';
+                    } else if (acc >= oneMonthC) {
+                        tierColor = '#ffc107'; // Yellow (Tier 2)
+                        tierTitle = 'Nivel Amarillo: Eficiencia 50%';
+                    }
+
+                    // Estilo para la celda con borde izquierdo
+                    const accStyle = `border-left: 5px solid ${tierColor} !important; padding-left: 8px;`;
+
                     if (isEditMode && auth.currentUser) {
                         const actionsHtml = `<td style="text-align: center; padding: 8px;">
                         <button class="btn btn-edit" onclick="enableEditing('${name}')" title="Editar jugador">✏️</button>
                     </td>`;
-                        row.innerHTML = `<td style="font-weight: 600; padding: 16px 5px; position: relative;">${nameHtml}</td><td>${formatNumber(player.previous || 0)}</td><td>${formatNumber(player.current || 0)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${formatNumber(calc.semanal)}</td><td class="${getColorClass(calc.avgDailyPerc, 'percentage')}">${formatNumber(calc.avgDaily)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${metaContent}</td><td>${formatNumber(finalPotentialExcess)}${deficitHtml}${formatExtraDonationTime(finalPotentialExcess / (goalDaily || 1))}</td><td class="${getColorClass(calc.totalPerc, 'total')}">${formatNumber(player.total || 0)}</td>${actionsHtml}`;
+                        row.innerHTML = `<td style="font-weight: 600; padding: 16px 5px; position: relative;">${nameHtml}</td><td>${formatNumber(player.previous || 0)}</td><td>${formatNumber(player.current || 0)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${formatNumber(calc.semanal)}</td><td class="${getColorClass(calc.avgDailyPerc, 'percentage')}">${formatNumber(calc.avgDaily)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${metaContent}</td><td style="${accStyle}" title="${tierTitle}">${formatNumber(finalPotentialExcess)}${deficitHtml}${formatExtraDonationTime(finalPotentialExcess / (goalDaily || 1))}</td><td class="${getColorClass(calc.totalPerc, 'total')}">${formatNumber(player.total || 0)}</td>${actionsHtml}`;
                     } else {
-                        row.innerHTML = `<td style="font-weight: 600; padding: 16px 5px; position: relative;">${nameHtml}</td><td>${formatNumber(player.previous || 0)}</td><td>${formatNumber(player.current || 0)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${formatNumber(calc.semanal)}</td><td class="${getColorClass(calc.avgDailyPerc, 'percentage')}">${formatNumber(calc.avgDaily)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${metaContent}</td><td>${formatNumber(finalPotentialExcess)}${deficitHtml}${formatExtraDonationTime(finalPotentialExcess / (goalDaily || 1))}</td><td class="${getColorClass(calc.totalPerc, 'total')}">${formatNumber(player.total || 0)}</td>`;
+                        row.innerHTML = `<td style="font-weight: 600; padding: 16px 5px; position: relative;">${nameHtml}</td><td>${formatNumber(player.previous || 0)}</td><td>${formatNumber(player.current || 0)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${formatNumber(calc.semanal)}</td><td class="${getColorClass(calc.avgDailyPerc, 'percentage')}">${formatNumber(calc.avgDaily)}</td><td class="${getColorClass(calc.metaPerc, 'percentage')}">${metaContent}</td><td style="${accStyle}" title="${tierTitle}">${formatNumber(finalPotentialExcess)}${deficitHtml}${formatExtraDonationTime(finalPotentialExcess / (goalDaily || 1))}</td><td class="${getColorClass(calc.totalPerc, 'total')}">${formatNumber(player.total || 0)}</td>`;
                     }
 
                     // Mostrar vista previa si hay cambios pendientes para este jugador (solo admin)
@@ -3754,7 +3775,7 @@
         // Service Worker con Workbox
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./service-worker-v222.js')
+                navigator.serviceWorker.register('./service-worker-v223.js')
                     .then(registration => {
                         console.log('Service Worker registrado con Workbox:', registration);
 
