--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker Donaciones Pocket Ants v3.4</title>
+    <title>Tracker Donaciones Pocket Ants v1.3</title>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -545,23 +545,20 @@
             border-right: none;
         }
 
-        /* Colores por rendimiento - VIVID UPDATE v3.4 */
+        /* Colores por rendimiento */
         .green {
-            background-color: #28a745 !important;
-            color: white !important;
-            font-weight: 600;
+            background-color: #d4edda !important;
+            color: #155724;
         }
 
         .yellow {
-            background-color: #ffc107 !important;
-            color: #212529 !important;
-            font-weight: 600;
+            background-color: #fff3cd !important;
+            color: #856404;
         }
 
         .red {
-            background-color: #dc3545 !important;
-            color: white !important;
-            font-weight: 600;
+            background-color: #f8d7da !important;
+            color: #721c24;
         }
 
         /* VISTA PREVIA DE CAMBIOS - Solo para admin */
@@ -3778,7 +3775,7 @@
         // Service Worker con Workbox
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./service-worker-v340.js')
+                navigator.serviceWorker.register('./service-worker-v130.js')
                     .then(registration => {
                         console.log('Service Worker registrado con Workbox:', registration);
 
