--- a/index.html
+++ b/index.html
@@ -3970,17 +3970,8 @@
                     if (weeklyDonation >= weeklyGoal) {
                         // Superávit
                         const excess = weeklyDonation - weeklyGoal;
-                        const oneWeek = goalDaily * 7;
-                        const oneMonth = oneWeek * 4;
-
-                        // Calcular eficiencia basada en el acumulado ACTUAL
-                        let efficiency = 1.0;
-                        if (finalAccumulated >= (oneMonth * 5)) efficiency = 0.05;
-                        else if (finalAccumulated >= (oneMonth * 3)) efficiency = 0.10;
-                        else if (finalAccumulated >= oneMonth) efficiency = 0.50;
-
-                        const effectiveExcess = excess * efficiency;
-                        finalAccumulated += effectiveExcess;
+                        // Corrección: Suma directa, sin eficiencia (igual que startNewWeek)
+                        finalAccumulated += excess;
                     } else {
                         // Déficit
                         const deficit = weeklyGoal - weeklyDonation;
